--- a/spark-logger/src/main/resources/application.properties
+++ b/spark-logger/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8989
 
 #============== kafka ===================
 # 指定 kafka 代理地址，可以多个
-spring.kafka.bootstrap-servers=hadoop202:9092,hadoop203:9092,hadoop204:9092
+spring.kafka.bootstrap-servers=cdh-01:9092,cdh-02:9092,cdh-03:9092
 # 指定消息 key 和消息体的编解码方式
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
