--- a/spark-realtime/pom.xml
+++ b/spark-realtime/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>elasticsearch</artifactId>
             <version>7.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
 </project>
