--- a/spark-realtime/src/main/resources/config.properties
+++ b/spark-realtime/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 # Kafka ≈‰÷√
 kafka.broker.list=cdh-01:9092,cdh-02:9092,cdh-03:9092
 # Redis ≈‰÷√
-redis.host=localwindow
+redis.host=localhost
 redis.port=6379
